# sales-kit

./: .gitignore  README.md  dev.sh  pyproject.toml
data/: products.xlsx
src/: __main__.py  excel.py  llm.py  ppt.py  structs.py  utils.py
templates/: template.pptx
