[project]
name = "sales-kit"
version = "0.1.0"
description = "SalesKit is a tool for quickly creating guiding material for your clients."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "loguru>=0.7.3",
    "ollama>=0.4.7",
    "pydantic>=2.10.6",
    "python-pptx>=1.0.2",
    "ruff>=0.9.6",
    "streamlit>=1.42.0",
    "unidecode>=1.3.8",
    "watchdog>=6.0.0",
    "xlwings>=0.33.7",
]

[tool.ruff]
include = ["src/**/*.py"]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D211", "D212", "COM812", "D203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
